--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ function chgAction() {
             
 <div>
   <h1> Load Your requirement </h1>
-  <form id="form1" name="form1" method="post" action="">
+  <form id="form1" name="form1"  action="">
    <!--  <label for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name.."> -->
 
